--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+.classpath
+.project
+.settings/
+.springBeans
+target/
+
+# idea ignore
+.idea/
+*.ipr
+*.iml
+*.iws
 *.class
 
 # Mobile Tools for Java (J2ME)
