--- a/api/pom.xml
+++ b/api/pom.xml
@@ -24,9 +24,14 @@
             <artifactId>freemarker</artifactId>
             <version>2.3.20</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.thrift</groupId>
+            <artifactId>libthrift</artifactId>
+            <version>0.9.1</version>
+        </dependency>
     </dependencies>
-	    <profiles>
-        <profile>
+    <profiles>
+    <profile>
 			<id>prod</id>
 			<properties>
 				<deploy.type>prod</deploy.type>
