--- a/tymng/src/main/webapp/WEB-INF/web.xml
+++ b/tymng/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
-            classpath*:*Context.xml
+            classpath*:conf/**/*Context.xml
         </param-value>
     </context-param>
 
