--- a/tymng/pom.xml
+++ b/tymng/pom.xml
@@ -70,7 +70,26 @@
 
     <profiles>
         <profile>
-            <id>prod</id>
+            <id>dev</id>
+            <properties>
+                <env>dev</env>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources-env/dev</directory>
+                    </resource>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                    </resource>
+                </resources>
+            </build>
+        </profile>
+        <profile>
+        <id>prod</id>
             <properties>
                 <env>prod</env>
             </properties>
