--- a/api/pom.xml
+++ b/api/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>com.ifhz</groupId>
-		<artifactId>cmsmng</artifactId>
+        <artifactId>cmsmng</artifactId>
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -15,19 +15,26 @@
     <!--依赖-->
     <dependencies>
         <dependency>
-			<groupId>com.ifhz</groupId>
-			<artifactId>core</artifactId>
-			<version>1.0.0</version>
-		</dependency>
+            <groupId>com.ifhz</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0.0</version>
+        </dependency>
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
             <version>2.3.20</version>
         </dependency>
+
         <dependency>
-            <groupId>org.apache.thrift</groupId>
-            <artifactId>libthrift</artifactId>
-            <version>0.9.1</version>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     <profiles>
