--- a/core/pom.xml
+++ b/core/pom.xml
@@ -255,6 +255,11 @@
             <version>2.5</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.2.2</version>
+        </dependency>
     </dependencies>
 
     <profiles>
@@ -278,7 +283,7 @@
             </build>
         </profile>
         <profile>
-        <id>prod</id>
+            <id>prod</id>
             <properties>
                 <env>prod</env>
             </properties>
