--- a/tymng/src/main/webapp/WEB-INF/web.xml
+++ b/tymng/src/main/webapp/WEB-INF/web.xml
@@ -85,6 +85,10 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>default</servlet-name>
+        <url-pattern>*.jpg</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
         <url-pattern>*.jpeg</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
