--- a/tymng/src/main/webapp/WEB-INF/web.xml
+++ b/tymng/src/main/webapp/WEB-INF/web.xml
@@ -56,7 +56,7 @@
     </filter>
     <filter-mapping>
         <filter-name>shiroFilter</filter-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/tymng/*</url-pattern>
     </filter-mapping>
 
     <servlet>
@@ -106,7 +106,7 @@
     </servlet-mapping>
 
     <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>index</welcome-file>
     </welcome-file-list>
     <error-page>
         <error-code>404</error-code>
