--- a/core/pom.xml
+++ b/core/pom.xml
@@ -280,6 +280,11 @@
             <artifactId>xstream</artifactId>
             <version>1.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-exec</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
 
     <profiles>
