--- a/core/src/main/resources-env/dev/configure.properties
+++ b/core/src/main/resources-env/dev/configure.properties
@@ -1,3 +1,3 @@
-jdbc.url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
+jdbc.url=jdbc:oracle:thin:@localhost:1521:orcl
 jdbc.username=nzyw
 jdbc.password=nzyw
