--- a/core/pom.xml
+++ b/core/pom.xml
@@ -276,9 +276,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>xstream</groupId>
+            <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
-            <version>1.2.2</version>
+            <version>1.4.7</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
