--- a/tymng/src/main/webapp/WEB-INF/web.xml
+++ b/tymng/src/main/webapp/WEB-INF/web.xml
@@ -99,6 +99,14 @@
         <servlet-name>default</servlet-name>
         <url-pattern>*.html</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.xlsx</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.xls</url-pattern>
+    </servlet-mapping>
 
     <servlet-mapping>
         <servlet-name>AppServlet</servlet-name>
