--- a/hzfmng/src/main/webapp/WEB-INF/web.xml
+++ b/hzfmng/src/main/webapp/WEB-INF/web.xml
@@ -100,6 +100,15 @@
         <servlet-name>default</servlet-name>
         <url-pattern>*.html</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.xls</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.xlsx</url-pattern>
+    </servlet-mapping>
+
 
     <servlet-mapping>
         <servlet-name>AppServlet</servlet-name>
