新权限授权

--- a/core/src/main/resources-env/dev/configure.properties
+++ b/core/src/main/resources-env/dev/configure.properties
@@ -1,3 +1,6 @@
-jdbc.url=jdbc:oracle:thin:@192.168.1.52:1521:eic
-jdbc.username=counter
-jdbc.password=XTgRDzFY
+#jdbc.url=jdbc:oracle:thin:@192.168.1.52:1521:eic
+#jdbc.username=counter
+#jdbc.password=XTgRDzFY
+jdbc.url=jdbc:oracle:thin:@db.dfstock4g.me:1521:eic
+jdbc.username=tycounter
+jdbc.password=CIgRAzQK
