--- a/core/pom.xml
+++ b/core/pom.xml
@@ -169,6 +169,11 @@
             <artifactId>c3p0</artifactId>
             <version>0.9.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.0.9</version>
+        </dependency>
 
         <!-- mybatis -->
         <dependency>
